refactor: Improve audio processing and cleanup unused methods
- Simplified `AudioProcessor` logic by replacing redundant structures and improving readability.
- Removed deprecated methods from `SpeechConfig`, `SpeechToText`, and `TextToSpeech` classes.
- Enhanced test cases with better consistency and reduced boilerplate.
- Updated `CONTRIBUTING.md` for clearer issue resolution guidance related to audio formats.